Arrow wrap fix

--- a/sgem-home-equity-loan-calculator/assets/css/hel-cal-calculator.css
+++ b/sgem-home-equity-loan-calculator/assets/css/hel-cal-calculator.css
@@ -730,6 +730,7 @@
    flex-wrap: nowrap !important;
    flex-direction: row;
    align-items: flex-start;
+   padding-right: 25px;
 }
 
 .sgem-hel-collapsible-summary-disclaimer {
@@ -738,6 +739,7 @@
    cursor: pointer;
    color: #474747;
    width: 78px;
+    padding-right: 25px;
 }
 
 
@@ -752,7 +754,7 @@ details.sgem-hel-details-disclaimer > summary::after {
    background-position: center -2px;   
    background-image: url(../images/drop-down-arrow-hel.svg);
    margin-top: 2px;
-   margin-left: 2px;
+   margin-right: -25px;
    transition: transform 0.3s;
 }
 details.sgem-hel-details-disclaimer[open] > summary::after {
